--- a/app/src/main/res/layout/activity_recycler_view_main.xml
+++ b/app/src/main/res/layout/activity_recycler_view_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".recyclerView.RecyclerView_main">
+    tools:context=".recyclerView.recyclerViewMain">
  <android.support.v7.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
